apps/scanner-app/deploy/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: scanner-app
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
