apps/scanner-app/deploy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: scanner
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app: scanner
spec:
  selector:
    app: scanner
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: scanner
