apps/scanner-app/deploy/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "15"
  labels:
    app: scanner-frontend
  name: scanner-frontend
spec:
  to:
    kind: Service
    name: scanner-frontend
    weight: 100
  port:
    targetPort: scanner-frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
